--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ Click==7.0
 Flask==1.0.2
 Flask-JWT==0.3.2
 Flask-RESTful==0.3.6
+Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 PyJWT==1.4.2
 pytz==2018.5
 six==1.11.0
+SQLAlchemy==1.2.12
+uWSGI==2.0.17.1
 Werkzeug==0.14.1
