fixed deployment error due to wrong path given

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,5 +2,6 @@
 http-socket = :$(PORT)
 master = true
 die-on-term = true
-module = code/run:app
+chdir = /app/code/
+module = run:app
 memory-report = true
